--- a/index.html
+++ b/index.html
@@ -1,16 +1,37 @@
-<html>
-    <head>
+html>
+    <!DOCTYPE html>
+<head>
+    <title> Simple Interest Calculator</title>
     <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
     </head>
     <body>
+
+    </body>
+        
+        <div>
+            <div class="maindiv">
         <h1>Simple Interest Calculator</h1>
 
         Amount <input type="number"  id="principal">  <br/>
-        Rate <input type="number"  id="rate">  <br/>
-        No. of Years <input type="number"  id="years">  <br/>
+        Rate <input type="range"  id="rate" min="1" max="20" value="0.25.">  
+        
+        <span id="rate_val">
+            10.25%
+        </span>
+        <br/>
+        No. of Years <input type="number"  id="years">  
+        <select id="years">
+            <options value="1">1</option>
+                <1,2,3,4,5,6,7,8,9,10>
+            </select>
+        <br/>
         Interest : <span id="result"></span><br>
 
-        <button onclick="compute()">Compute</button>
-    </body>
+        <button onclick="compute()">Compute Interest</button>
+        <span id="result">
+        </span>
+            </div>
+            <footer>
+                &#169; This Calculator belongs to Mike McCune
 </html>
