--- a/index.html
+++ b/index.html
@@ -47,6 +47,6 @@
             
             <footer>
                 <br>
-                &#169; This Calculator belongs to Everyone Can Get Rich
+                &#169; Everyone Can Get Rich
             </div>
 </html>
